hello-k8s-gitops/gitops/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-frontend
spec:
  selector:
    app: hello-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
