hello-k8s-gitops/gitops/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: hello.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hello-backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-frontend
                port:
                  number: 80
